# VoxelEngine3.0

./: CMakeLists.txt  README.md  TODO.md
Analysis/: VoxelEngine_Analysis.ipynb
cmake/: LinkIMGUI.cmake
src/: camera.cpp  camera.hpp  config.hpp  fpcamera.cpp  fpcamera.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  materialpool.cpp  materialpool.hpp  octree.cpp  octree.hpp  octree_cpu.cpp  octree_cpu.hpp  renderer.cpp  renderer.hpp  skybox.cpp  uiconfig.hpp  voxelengine.cpp  voxelengine.hpp
src/Logger/: logger.cpp  logger.hpp
src/Noise/: FractalNoise.cpp  FractalNoise.h  Perlin.cpp  Perlin.h
src/UI/: control.cpp  control.hpp  info.cpp  info.hpp  interface.cpp  interface.hpp  logger.cpp  logger.hpp  viewportWidget.cpp  viewportWidget.hpp  widget.cpp  widget.hpp
src/renderer/: camera.cpp  camera.hpp  core.hpp  material.cpp  material.hpp  octree.cpp  octree.hpp  profiler.cpp  profiler.hpp  renderer.cpp  renderer.hpp  skybox.cpp  skybox.hpp
src/shd/: accel_struct_ray.frag  accum.comp  albedo_ray.frag  avg.comp  emit.comp  final.frag  fragment.glsl  generate_primary.comp  internal.glsl  normal.comp  normal_ray.frag  normal_update.comp  pixelAccum.comp  pixelAvg.comp  postFragment.glsl  postProccesingFragment.glsl  rank.comp  ray.frag  ray.vert  renderFragment.glsl  renderVertex.glsl  resolve.comp  schedule.comp  shade.comp  threshold.comp  trace.comp  vertex.glsl  voxelid_ray.frag  wavefront.glsl
